// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHANGED SEARCH_TEXT changes searchText in state 1`] = `
Object {
  "isLoading": false,
  "places": Array [],
  "region": Object {
    "latitude": 0,
    "latitudeDelta": 0.01,
    "longitude": 0,
    "longitudeDelta": 0.01,
  },
  "searchText": "a query",
  "stations": Array [],
  "trip": null,
}
`;

exports[`LOADING_FINISHED sets loading to false 1`] = `
Object {
  "isLoading": false,
  "places": Array [],
  "region": Object {
    "latitude": 0,
    "latitudeDelta": 0.01,
    "longitude": 0,
    "longitudeDelta": 0.01,
  },
  "searchText": "",
  "stations": Array [],
  "trip": null,
}
`;

exports[`LOADING_STARTED sets loading to true 1`] = `
Object {
  "isLoading": true,
  "places": Array [],
  "region": Object {
    "latitude": 0,
    "latitudeDelta": 0.01,
    "longitude": 0,
    "longitudeDelta": 0.01,
  },
  "searchText": "",
  "stations": Array [],
  "trip": null,
}
`;

exports[`LOCATION_UPDATED updates location in state 1`] = `
Object {
  "isLoading": false,
  "places": Array [],
  "region": Object {
    "latitude": 10,
    "latitudeDelta": 0.01,
    "longitude": 10,
    "longitudeDelta": 0.01,
  },
  "searchText": "",
  "stations": Array [],
  "trip": null,
}
`;

exports[`PLACES_FETCHED puts places in state 1`] = `
Object {
  "isLoading": false,
  "places": Array [
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.94887719999999,
          "lng": -87.64980109999999,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.9502286302915,
            "lng": -87.64831891970849,
          },
          "southwest": Object {
            "lat": 41.9475306697085,
            "lng": -87.6510168802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "24552c99459466da9c08372d4dbf5fc90ea5f5a4",
      "name": "Center on Halsted",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 2988,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/102262489133979285548/photos\\">Rich Kingston</a>",
          ],
          "photo_reference": "CmRaAAAAgGRXDad2ISzi9dwMKz_SwvVG9mOO-5GI77PKyVoseumahypSYGsBv2_yoFpYFLAn_Xl6SieqpUyLiFS_g7MneUG8ahQlPg91RbrTGH6hinjVXhuD7v2KjnH3yAafqZ02EhAQ88yw57252EHg1Depw0uiGhS7fl06XW8Tek4RU2EpE2YnkGuVsw",
          "width": 5312,
        },
      ],
      "place_id": "ChIJx_VyuLDTD4gR_TjFLHXJdpY",
      "rating": 4.6,
      "reference": "CmRSAAAABoAkRb2_ykacgyHFm0IEo46JbG51y1aLwzR81wygutG02dqUKD6eSn1qWZ8ksDi8x2u-ACSCj1rxArrhhj3RX5neStM9NbUFOlUv563_6HpRu2YALYYAPZ03Wrc6OlBJEhAWjaFnAAXD2KS_GU0o3RBJGhR6a2EJlyHa4GG-qO03SYeAAQiRcg",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "3656 North Halsted Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.889667,
          "lng": -87.62222600000001,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8910321302915,
            "lng": -87.62073306970849,
          },
          "southwest": Object {
            "lat": 41.8883341697085,
            "lng": -87.6234310302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "ea5df0c43ca00134a4d5ab7739d6e35e622d844b",
      "name": "University of Chicago: Gleacher Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 1365,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/118247865698145868157/photos\\">University of Chicago: Gleacher Center</a>",
          ],
          "photo_reference": "CmRZAAAAssoIj8jWyoBF4eLNIN529i5-DVP4jQ4LQfIKn77opycID_UA_EbC0xpfZAFo6geYHX9P0BrlNKXPSaJNGEqx3WDeGTdV8-beUsP5r7ggR5EqOnUdbObcJjRLIab7BznLEhC-ArbSz5qmeLMiQV_1osESGhQc-q1xSqeDpB8eShvUP4Zmwj5NPg",
          "width": 1364,
        },
      ],
      "place_id": "ChIJ1_9QNWImDogRN4O5A4dC5S0",
      "rating": 4.7,
      "reference": "CmRRAAAAS6ivk81O6H8Ruq-V-c1yMn68fuZSYUkOkmqjuSOQhJAJo1g6afbfdD6kveWtxwIFZOdE1gAsT2p-Vh01L9wuQLhXQ5KjJeQEJa57iJXxxw_Xlu9flzBZwiIOK_K3eU4WEhBDzphlnio8Xla-HI79SM-JGhSh5Y5IspanYEEROTpR37DX400agQ",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "450 North Cityfront Plaza Drive, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.94883249999999,
          "lng": -87.6499432,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.95018528029149,
            "lng": -87.64838926970849,
          },
          "southwest": Object {
            "lat": 41.94748731970849,
            "lng": -87.6510872302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "a03ad74ad5666f574fc5e6bf3e78e9aec7cad106",
      "name": "Hoover-Leppen Theatre",
      "place_id": "ChIJzfyI6bDTD4gRhcDkW3jvlFE",
      "reference": "CmRRAAAAqmA12fqwmS1ZZIl4aeHFuPLQJij4QzwNfl6ZfUeKTFgumrT5MHyPTIhmaLR2ZP1N81N1e2rr2k4b7zcP0bOzR5tlK5LqCwYvfa4cjs9gk1wAxUAtXeOA0yM7AN7PVHPTEhB_qFLCTRyt86jGR_Ek3HcOGhSFpiZ6UOkF5lfF_K9uvOK-rkzdIg",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "3656 North Halsted Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.9548835,
          "lng": -87.6733696,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.9562315802915,
            "lng": -87.67223911970848,
          },
          "southwest": Object {
            "lat": 41.9535336197085,
            "lng": -87.6749370802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "64eba93141e0b3e39646da7d299b12598280445a",
      "name": "Ravenswood Event Center",
      "photos": Array [
        Object {
          "height": 2988,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/110984508345413247388/photos\\">Glen Detmers</a>",
          ],
          "photo_reference": "CmRaAAAAe0Ff2CxLgsf4W6as0-gAc9tNkO4h6E-itVpJT3Oid4iKOm5el-_64qIeGKkZdtlDP3TSQh_N7ZmNLmtc9C0HPUm6DCEcbPEErtA3sQn077M6IjtQOIbESXLzfiVS_fDNEhDRCEDcWMJlbm3MdzFLB5eVGhQ9vNYj65_qlOB93-3AbauG2nUJVQ",
          "width": 5312,
        },
      ],
      "place_id": "ChIJn16GuUDSD4gR_OLc_tOO7w0",
      "rating": 4.5,
      "reference": "CmRRAAAAd7fx6C7-KGQF79cj2Ld58bV2ETDu8eqlSdgDiuUbyzBHRCnAAX75cFtm9oRc1jg5NdAw-i08VqDyD43PX3tG2DHBeWEQdyaEvyIXNsNacxBztobyqe1mb3lv3nDWES2TEhCbDj0ksozsanuYs5GM7Ep_GhRniex8BW5v41IKkv2NpbGdN_TogA",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "4011 North Ravenswood Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8512289,
          "lng": -87.617034,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.85257788029149,
            "lng": -87.6156850197085,
          },
          "southwest": Object {
            "lat": 41.84987991970849,
            "lng": -87.6183829802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "1f036b48e76eaae2e27c6eda91cb29a654b1f322",
      "name": "McCormick Place",
      "opening_hours": Object {
        "open_now": false,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 1597,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/104656919627285920329/photos\\">McCormick Place</a>",
          ],
          "photo_reference": "CmRaAAAAC6nOWR4Gv2lUxv_XQK3ZkvgQE6ZcbLaGC67DzXK7NsBe9_px0FA9eWgsj0OuKhS4qwui1bec2cbrS93yIPQneOghYy4caXH65qFbSWzxPYSR1nf1qmyX_HEfySJBHJtVEhAWEgB9NKSh1dgG5TDFQ94mGhQbL4lDgMsdBa3VRsKop_mk6hr5pQ",
          "width": 2700,
        },
      ],
      "place_id": "ChIJV1gyFIErDogR4vUnQw74VN4",
      "rating": 4.3,
      "reference": "CmRSAAAAnvecngtM7EfdV5goxB6eGzI7ENem-bVqSZNTPUzeTne9V_jTXz515iJjAxttmT4KEEWEOCiavyh73DXODyh-_T0dG9kAFlJ7Bv9xtRu6fFodweMLxFDD_NpUfDDg4AEiEhCWqt6QVavvAij89xOL656YGhScPna79PoqZ0gJaWhA12S961JvGw",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "2301 South King Drive, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.87498829999999,
          "lng": -87.6272868,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.87633488029149,
            "lng": -87.6260949697085,
          },
          "southwest": Object {
            "lat": 41.8736369197085,
            "lng": -87.62879293029151,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "93a593814e3ef658c7598337518a48316f3c786b",
      "name": "University Center",
      "photos": Array [
        Object {
          "height": 2048,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/114512226883066614218/photos\\">Sulwana Hussain</a>",
          ],
          "photo_reference": "CmRaAAAAfCV4EAU18hZ1QqG8ReMP6LzObGYLNY2fyuOGree3BXfsitim8DzKHpZKWifeZoAYQ0rAaFfO2D5mTwiB18LbK_4mYeCHtfbNzERqGy6S1VMlPnFi1opY6bTNkYPHxkCJEhBmNF2ogP7H8FBGFmg6rbslGhSWFMWkIHbt6hMPDx_A1XdyuCfRZA",
          "width": 1152,
        },
      ],
      "place_id": "ChIJSb3R6jspDogRK_h3X6oR2O8",
      "rating": 3.2,
      "reference": "CmRSAAAAjVDubEikOFXYPr0SzjEEmx0BvSGzcFP5tiGJYMIWTz0V2loceFn6P2gHYr829R6WsV9LtYNTAooRSz-Lz_ipB2GUbSW_br-b9bclhzaYx_xyg3TL7Z3jPtkbhYI2GadaEhDCExXxs2yhMzUP5kiS0oQMGhSI7KO7B2yLEglijLeemjaTkfBgKQ",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "525 S State St, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8806908,
          "lng": -87.6741759,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8820434302915,
            "lng": -87.67278586970849,
          },
          "southwest": Object {
            "lat": 41.8793454697085,
            "lng": -87.6754838302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "99dbf0f7af6e6fd7fe9f48b5cfd5d9374d40eee7",
      "name": "United Center",
      "photos": Array [
        Object {
          "height": 3456,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/103586896367869136358/photos\\">Hugh Huang</a>",
          ],
          "photo_reference": "CmRaAAAA5iCf__mgPJzh0d1Fi9xGMaMFEMdRZE2p5LzTBcEgxiZZIP5SFuAQ40t49f_YdF1CYicYEUFXdspxa9pmZcRro0ua49CmZc44L1zHeF8pI4ab63bgA_ehGI3UHUi7G4gUEhAk7kPUbfwykp8p27Ot6E9GGhTM1REVBa1YW00b7GgFqf9GxhG69w",
          "width": 5184,
        },
      ],
      "place_id": "ChIJT7Wpyj4tDogRRAPwjAbwk5s",
      "rating": 4.6,
      "reference": "CmRSAAAAi_0YboCctOq85Z7y1hInhAYjGfxeNk__oF4Rdvr7hwdNpZNyEWBgeCDp_i-IZAJJq5ChvHNfZijT-HSIF4QUwmHMZL9jZvup-tHFly168BtRNqj74NkPOTA8GMxdrDBnEhB5kpaG6JAQdWVAsRy3c2NyGhRyGrZMA_hcz94mEi3NJ1hoO5fPvg",
      "scope": "GOOGLE",
      "types": Array [
        "stadium",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "1901 West Madison Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.87898759999999,
          "lng": -87.62506499999999,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8803436802915,
            "lng": -87.62339851970849,
          },
          "southwest": Object {
            "lat": 41.8776457197085,
            "lng": -87.6260964802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "b589365d0ebd05bef13dbaf5fb11db192380b641",
      "name": "Chicago Symphony Center",
      "photos": Array [
        Object {
          "height": 2988,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/114855837793535279090/photos\\">Gregory Raffio</a>",
          ],
          "photo_reference": "CmRaAAAATfvyO6MYPatfcvJy8x2B2zz9cR_Gfu_gkBkysdHJTx6IXmInXp25Bx48bTA5-Rc0hqzpIF4nGUDX_89qzVY__5usXsqruaGzRYB6OZuqBFctv8UZDXwQagmfSb75kXdYEhCiIUYvivhcq-WoL7JMe3TEGhTzUBIAXAHH8jNQOvseoClp7PphcA",
          "width": 5312,
        },
      ],
      "place_id": "ChIJ03xbwqMsDogRvvGR7IM-E78",
      "rating": 4.8,
      "reference": "CmRSAAAAX4qNdBFDa2o6j3lLad5S4GSwkN4Vn2QcZMQ3yIrs1bpN4sfCge36Ixnbg9jkzSgMjJR5OVbhO0ER4qSCDXPzjQ9v-GWFQVCyY-7AYdJSogfVJZWgLogMlrSeirLObi76EhBNKEL9wslf1yDbx_mMv1-KGhSUxWileo3498vwrIfPnqxCU9rgqQ",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "220 South Michigan Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.884929,
          "lng": -87.628171,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8862788802915,
            "lng": -87.6266854197085,
          },
          "southwest": Object {
            "lat": 41.8835809197085,
            "lng": -87.6293833802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/movies-71.png",
      "id": "7fd44c87b2f041a849344613e2370b24cd1e1a90",
      "name": "Gene Siskel Film Center",
      "photos": Array [
        Object {
          "height": 3264,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/113076932514064199522/photos\\">Gary Gonzalez</a>",
          ],
          "photo_reference": "CmRaAAAANDsJWLfvpIgpjYFK1DXLPDoQQomr3av-c37LHbXBpnWi_0xzDr2GFnB2LNPqviAokgUyJSH-pkaPF3aegkcWXfoKbqoG_JstId-KaSJSz8ifAZrFlWDUNXTlnPZg1xrVEhCHiMOi1Weu0AWm8YHJ-LmYGhTXy8_wPk4kSpbLb3iELqbdFx7RrQ",
          "width": 2448,
        },
      ],
      "place_id": "ChIJnUqWUKUsDogRs518cBgjRaw",
      "rating": 4.6,
      "reference": "CmRSAAAAQVUxx4JqrZaJHs0felrkSMRzAG3GGPIkZu6TxxF8_FPDcWse9GPXicWaD4mgrMjgoYYPxSprVEBSUUQ5SRUy6Py3s7SOLmCm6E4-RwD2a-XSctGRunxj_2sQPneiPPuCEhAZs1L8FXCkeK89lCPeZgeTGhS0iMVCqAZL-rrKB5H4uHbsiLkYnQ",
      "scope": "GOOGLE",
      "types": Array [
        "movie_theater",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "164 North State Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8953619,
          "lng": -87.65459849999999,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.89671088029149,
            "lng": -87.6532495197085,
          },
          "southwest": Object {
            "lat": 41.8940129197085,
            "lng": -87.6559474802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/museum-71.png",
      "id": "523150f1cedafc36975a8f6cdb7c80b7c1989561",
      "name": "Intuit: The Center for Intuitive and Outsider Art",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 3264,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/113325816092605212502/photos\\">Intuit: The Center for Intuitive and Outsider Art</a>",
          ],
          "photo_reference": "CmRaAAAAwXIEqg9hZh_UB99tzCAy-WCeasqCsY4diULeQDfdw6dWHaU6Zp0bH8i27a8fuSVf8AiGprBNuCXA13rUpKy2-xo2PaAlUzdaxiooT0okPM_M8VsAcWe5mT0XfBwqw9mPEhB7WG3xXLpWvsdNaP9yaEvdGhQFkNukqamc7Xi3X4bV2idp_8sFUQ",
          "width": 4928,
        },
      ],
      "place_id": "ChIJ9R0_ytQsDogRmywSXRu1VeQ",
      "rating": 4.6,
      "reference": "CmRSAAAAuly9g-7R7oeK_Whh5a8xFh5V6MLzKvUXxk43slOu7FQTL4nqooAlyoN7XKa966zmtZBw6lCWAwSttOXNYGJe_eoJMijdi7D0jYb6lU8ZvKfsbTIOlkKKtf26eYmlGxBDEhALD9WRsx2qS7GYmPPC51vDGhSBQhO-27xWxiAOWQuU3VWDyhJdJw",
      "scope": "GOOGLE",
      "types": Array [
        "art_gallery",
        "museum",
        "store",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "756 North Milwaukee Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.9401434,
          "lng": -87.6548612,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.94136918029149,
            "lng": -87.65351061970848,
          },
          "southwest": Object {
            "lat": 41.93867121970849,
            "lng": -87.6562085802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "8efde9e6467143d660cf5478c72f950149a491a3",
      "name": "Japanese Culture Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 1536,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/102723418276407885085/photos\\">Japanese Culture Center</a>",
          ],
          "photo_reference": "CmRaAAAA-hsCKODo7swRvWGyNs8gBz6gwDpdCADiLwajDZL-L6eH8R9b39u130Y_6SKHckT9DO7_1ahC-4mLMyZEwTvgsR1wuKtVSio_AGVkQsxvlQyM1m6DU6RvBdpjPH87x4yUEhCOzmYLbaPnBNhKhEu1szOKGhTGTFBeFX8OfYgjp29gk_MXnXayiA",
          "width": 2048,
        },
      ],
      "place_id": "ChIJQZMaj6vTD4gRF2_zcohQrEE",
      "rating": 4.9,
      "reference": "CmRRAAAAL5ptoK4Wl42yUS6WJRr0s-wFBfwKUN_MpHXhzZZTV-sLwU_Zq5aR9lwhH8JUh9qtJq5oD26x05pta-nm-aPb4Jb7_6eiMGIiEsNxk7GIsGBvbYygBRBHgFt32QILY52CEhAxdiqeBMTyyOySEBvLN4rVGhQ1poOulljuBGrCRFZKl_pO95K-Hw",
      "scope": "GOOGLE",
      "types": Array [
        "health",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "1016 West Belmont Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8533645,
          "lng": -87.7192132,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8546452302915,
            "lng": -87.7178195697085,
          },
          "southwest": Object {
            "lat": 41.8519472697085,
            "lng": -87.72051753029152,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "46c82e8f319d18f1d0858f9348c158ae9413efce",
      "name": "Lawndale Christian Fitness Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 4128,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/110449629733029925673/photos\\">Maria Davila</a>",
          ],
          "photo_reference": "CmRaAAAAItFLVU0T7jUoz62l-8CCl7-DOpOSxWzDidpYnHHKudBuFCS_rI2WXmrkzL9xaP6ulPwSokAC_F_bWLZz0AqOkCGCiAFdron4BdZZ45eTC_Kb21-bex5wTxH7frSatOEjEhCPZQdPOI9F6mdbqkTgQvRoGhS84N_Wi57i8ru2aQJCDfgPY-3-QA",
          "width": 2322,
        },
      ],
      "place_id": "ChIJdxtxZl4yDogRhXywO-vgYoc",
      "rating": 4.6,
      "reference": "CmRSAAAAm_nAENrsjUWQL-TrG600qB8z3gipN5obiGOP6eoE0qbvusp4oiCT-n2nPLUbRCj5rDTVqPiGj5IU4u8N9NUK1iFOVXj_n8L_vn4tHHSYh2Wo5qB5VrdW0EsXAWRAldehEhDRwedwDR_Q5yr_Op1uQ5SeGhSnHHKSvdZshnXeWhBHKQCOfIHuqA",
      "scope": "GOOGLE",
      "types": Array [
        "gym",
        "health",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "3750 Ogden Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8970403,
          "lng": -87.6392844,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8981396802915,
            "lng": -87.63792696970849,
          },
          "southwest": Object {
            "lat": 41.8954417197085,
            "lng": -87.6406249302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "e4cc158aedaa0fd4d85634ef5505c5454becb7a2",
      "name": "Jesse White Community Center Park",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 3024,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/103007523970216725564/photos\\">4 Runner</a>",
          ],
          "photo_reference": "CmRZAAAANy9KurAZRPfud1-CJgNP68vvRbaFPwGNzmGQPQZkvO50cLm7K-dm7ahsyYybkEmZ9PTt-CDLAqg4DFlBVYRfUZYSJ_7neHXbULAqMKUxAiu_rOC3hd0uejYc_XwQ1f75EhDjrt2b9-IqSpFP6XugjVo2GhTO1ROVo7NVVRPVTA_9zEnTlYR0FQ",
          "width": 4032,
        },
      ],
      "place_id": "ChIJfZTUazXTD4gRilN__c9KR8o",
      "rating": 4.8,
      "reference": "CmRSAAAArT_mKUmUMo1Y5OTW54MTMBSjdqpCdLzTyWuPiScNawGAMnH15AcZ8QCj97R5dhZIl-V6vIXQQOHRn13sADsBBDrHpSdBWafzdoEGNCK9ey-Gh3VrxALgRTk9aC8_DTUaEhBpZiEi-oJ3oX4ODudCrZ31GhSo8Qvdjez_VmcE0hMVntnOPAXgKQ",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "410-412 West Chicago Avenue, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.9004351,
          "lng": -87.66276739999999,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.90178488029149,
            "lng": -87.6612889697085,
          },
          "southwest": Object {
            "lat": 41.8990869197085,
            "lng": -87.66398693029151,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "dc8ce6892eeda61bcc0b056a96dd473d210d98d8",
      "name": "Bodhi Spiritual Center",
      "opening_hours": Object {
        "open_now": false,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 638,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/100591747350067827306/photos\\">Bodhi Spiritual Center</a>",
          ],
          "photo_reference": "CmRaAAAAco7w7TWOMiKPRJb9tUPRwNE99c8nxpaNNd4msGj8w-LLO7pTn-chCOSEhx6Rd801WQMnmrGxVw2YiKwV_V2wuDKdNxrYo6hM6Z7Q4DKWk3PdOOeDbAh8ql4LSywD34XREhDyIwxpuh1E6fRjUZc0cEBPGhSBNKeOxJZZ9bjXRATDV2FiqLDQjQ",
          "width": 638,
        },
      ],
      "place_id": "ChIJi_xI8wTTD4gRqvzjITNxz7o",
      "rating": 4.9,
      "reference": "CmRSAAAAHt7fbf5T7lhHmdLmsWNvkMtUfUKIOHVctMs6UELfpmFSVAAzR_GXficaYfkN51jrNxdGofdhROWZRHFqCJedriuo9MJD7L152QRU5goL9yIy03OR4duXEKjlPJJ8pTlREhDdu19Pe87oKHaOI3_FA6GUGhQD9tnSP1uRWNHVlr_HWCubsH0-FA",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "1012 North Noble Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.87921099999999,
          "lng": -87.637199,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.88056183029149,
            "lng": -87.6357360697085,
          },
          "southwest": Object {
            "lat": 41.87786386970849,
            "lng": -87.6384340302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/school-71.png",
      "id": "5b7e90f45239d6a9c9fe06b8e6a26528f3e203a0",
      "name": "Illini Center",
      "opening_hours": Object {
        "open_now": false,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 456,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/108490792604252161760/photos\\">Illini Center</a>",
          ],
          "photo_reference": "CmRaAAAALrPA1bGv4U_5bNWJ4ONsjcphTKbShVEseey6o9G8VUUzXUsnXTBWFFG1nyxNtpNa7wChHiYt2MS2YMSJ3K7ag-RdibRonCAGJ3G6amiNCiw7e9ioCuVVihGjFMNt9nPsEhCATzcPv348Z_KyM3vTJ2kyGhT5iiY5FR3YKigvkD9W-7JCgHnS1w",
          "width": 456,
        },
      ],
      "place_id": "ChIJmRjHar8sDogRy4WsWMFG_uI",
      "rating": 4,
      "reference": "CmRSAAAAp5OY_TgtBD5v4D2Em1hvAGWpXt7xPP36HBbWwHigNFiHjWY5j5fahdYjeQg1SMVmo3w9gFGs1sprghezF85L06mboHWVfvAiZf2lwqvbVVgDymtpLUASF_yf4BILoqlmEhDtp1nTnVDz5OP9jutppwnXGhSH48SJIOXaCb1LpCno7kYFYXAvlw",
      "scope": "GOOGLE",
      "types": Array [
        "university",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "200 South Wacker Drive, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.885913,
          "lng": -87.624185,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.88726198029149,
            "lng": -87.6228360197085,
          },
          "southwest": Object {
            "lat": 41.88456401970849,
            "lng": -87.62553398029151,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "07aff72e8c191ffc1d490a4e4f04a23f52cef4d1",
      "name": "Summit Executive Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 5312,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/114229796122005945644/photos\\">Kevin Krueger</a>",
          ],
          "photo_reference": "CmRaAAAANCkFhq4it8J1uP1vSiYATQwJTUAX_f0kb4nZ3XSgT63avjyf4ZII6tZxDzLnMa6acXXjVEX3P3l4wjeBNcZL2HCT5JAKd_HmOcfv0pRCCihucUEkMEG-AsKRJtC7FfJ3EhAw6lpelAp2n9KNeReuhYHHGhQ8qBgw2Eyz_Xl4OUSA2uyDIjYlTQ",
          "width": 2988,
        },
      ],
      "place_id": "ChIJm8T1T68sDogRIIkw7sRlrUA",
      "rating": 4.5,
      "reference": "CmRRAAAAiMc-fhVGjEQONz5r251qXMyeAMhMFoTYFrFItYWMPJqAmHNPe5qwoT-GqmNaZO0r4X8i5ZQs70qvJyqphZNWppgC6nbRe0TeEIYxjpP4vcR3qSzUn5SmiSGfqtEtaF7AEhCxuTReisiE01ylCJWiDAHHGhSvne5ctz8b2_XwSWRqiLKZTn3Fdg",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "205 N Michigan Ave 10th Floor, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8912783,
          "lng": -87.63085029999999,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8926260302915,
            "lng": -87.62962901970849,
          },
          "southwest": Object {
            "lat": 41.8899280697085,
            "lng": -87.6323269802915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/lodging-71.png",
      "id": "c2c2a1798c8c1573e34bee38d8b49c171b2b29e1",
      "name": "Aloft Chicago City Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 6000,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/109638185879037680620/photos\\">Aloft Chicago City Center</a>",
          ],
          "photo_reference": "CmRaAAAAA0VxIcRk6OjvSV8Tlpl8UiBMAZAwTxwccUevL_WV0X1cLDMZPSsbcJheDmxlHqxGnp1UiA4PZ3QyRR7mJftaL-JahZiRREtaLDWWlehGU0TtfjmXHs9ll4Hz1pmQEoyhEhDf5simZNblUZHiUk25z-w_GhTbNiTf9i3VqEQoV0fuGPXw5-xcmg",
          "width": 3582,
        },
      ],
      "place_id": "ChIJDYRXNLIsDogRojPDKzAq8aw",
      "rating": 4.5,
      "reference": "CmRSAAAAx56ryIObNP-dVnMFpkky-0GiVQkyNndSjldevkBEgA03OpsC0JkNQEfoJL1TmIQ6dtOIMtmGoiAqYroJLehIJH8CUUEMbHTCkSOGjymEu3JPCQl-JpBCSqq90b_cPOKQEhBkLscfuKDDTCHYWx8Bt_KcGhSo361Rm8UVXFfL2gLOT07kGcDe8g",
      "scope": "GOOGLE",
      "types": Array [
        "lodging",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "515 North Clark Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.8837536,
          "lng": -87.6249515,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8852150802915,
            "lng": -87.62360201970849,
          },
          "southwest": Object {
            "lat": 41.8825171197085,
            "lng": -87.62629998029149,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "af70c48209ab9fcb58d623b656ce5e0d338177b4",
      "name": "Chicago Cultural Center",
      "opening_hours": Object {
        "open_now": true,
        "weekday_text": Array [],
      },
      "photos": Array [
        Object {
          "height": 3648,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/105855665441549678170/photos\\">Jaroslav Hruška</a>",
          ],
          "photo_reference": "CmRaAAAAXbbczmWaixs2WemDHwk2XvZpx53fEFln5vPLlI1T9K5tSLiXLWFUv596RIBFKBxYWlgzAVn2xITAXWqw8hXHh2fkEK3QAKBJie_CozlnpBBdywiA94bTdBN2J5eeQhrzEhDE9m6S8XhhUw7GxYBNiInEGhT9Z9zd9Ku9s6woU21j5TJ8gjfcYA",
          "width": 4953,
        },
      ],
      "place_id": "ChIJHzRIuaUsDogRP_AJdMSgzjI",
      "price_level": 0,
      "rating": 4.7,
      "reference": "CmRRAAAAjMBD0jx7xQdUG7t8OB81bEpaDIvg0DANbc66Mm0dNnBgc_LuDHZSRTEnlhQg-QAer4CfampRPlr1t3YaDcFiafwutwWG98LqnG4LrwLtFkBFYtG205tqr9XyVyXHwce8EhDd17Bz1kjNZRrobTcLCIi1GhSCkzfqXeE8_61oLwfxg-3FXHwJfw",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "78 East Washington Street, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.894549,
          "lng": -87.633335,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.89590173029149,
            "lng": -87.6316931697085,
          },
          "southwest": Object {
            "lat": 41.8932037697085,
            "lng": -87.6343911302915,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "eb31cd005a7c48c33ac1835d79eb9559677ee23f",
      "name": "Chicago Latino Film Festival",
      "place_id": "ChIJ6apbQ7MsDogRnNEhb0iuspE",
      "reference": "CmRSAAAAu7PPNUNbf8VBmjj7Jx85-nhdolos6Fy2Jva_T_dEL8fuHjp37ih8V1SV68I651v3nPar0-n3WC9z9z98AYZWKxpndmGmJleXzN88FBtXRPN0b5DVNdF9BnJj2F7N4jEAEhCF_wZdG9CiYUTSVG-VAd_uGhTQAjfucJRaEaYJJ7KWOQoQHB-3Yg",
      "scope": "GOOGLE",
      "types": Array [
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "676 North LaSalle Drive, Chicago",
    },
    Object {
      "geometry": Object {
        "location": Object {
          "lat": 41.87502,
          "lng": -87.6270406,
        },
        "viewport": Object {
          "northeast": Object {
            "lat": 41.8763634302915,
            "lng": -87.6259723197085,
          },
          "southwest": Object {
            "lat": 41.8736654697085,
            "lng": -87.62867028029152,
          },
        },
      },
      "icon": "https://maps.gstatic.com/mapfiles/place_api/icons/generic_business-71.png",
      "id": "e43c779b66b05b5f6621a703f66c90de53dced6d",
      "name": "Conference Chicago",
      "photos": Array [
        Object {
          "height": 1000,
          "html_attributions": Array [
            "<a href=\\"https://maps.google.com/maps/contrib/101930899924008038360/photos\\">Conference Chicago</a>",
          ],
          "photo_reference": "CmRaAAAAJTIRjN9Foe_g4PGZT6NWXO5pf62R4NaiG-WRJvpuBcoF-QHCWLcmBj_zI82LWbZ8slb_n1q-4zwS386E-u4aNxN2lnj5HKahdwGbicO4wKu-6IN6dsF765VL_Wmw1QuEEhDu9I2zuhm3Ze6f6QaA2dGmGhR8tXMkC7cfZ6LZagVO1B6C0ypnMQ",
          "width": 1288,
        },
      ],
      "place_id": "ChIJIbc3DJgsDogRevejWRGMI-4",
      "rating": 3.3,
      "reference": "CmRSAAAAnzY4D0ub8C5nA9WrsCx8NKhdQSZ4t4UNzQVAdQ7XcKkA37IxCkfAyjpoc-NEkVX2dGoYH3E7M8w77UBIsdA-eYxoSf3IEBSzVJdWmbuEzVhqIPTZI3XbeXiuStXSJWFwEhD3YnWxFmTjhcWZ7OfpPZMXGhQtL6JTSDuoQPhEmvQKqtpOycDO6Q",
      "scope": "GOOGLE",
      "types": Array [
        "lodging",
        "point_of_interest",
        "establishment",
      ],
      "vicinity": "525 South State Street, Chicago",
    },
  ],
  "region": Object {
    "latitude": 0,
    "latitudeDelta": 0.01,
    "longitude": 0,
    "longitudeDelta": 0.01,
  },
  "searchText": "",
  "stations": Array [],
  "trip": null,
}
`;

exports[`STATIONS_FETCHED puts stations in state 1`] = `
Object {
  "isLoading": false,
  "places": Array [],
  "region": Object {
    "latitude": 0,
    "latitudeDelta": 0.01,
    "longitude": 0,
    "longitudeDelta": 0.01,
  },
  "searchText": "",
  "stations": Array [
    "station1",
    "station2",
  ],
  "trip": null,
}
`;

exports[`TRIP_SET puts trip data into state 1`] = `
Object {
  "isLoading": false,
  "places": Array [],
  "region": Object {
    "latitude": 75,
    "latitudeDelta": 50.005,
    "longitude": 75,
    "longitudeDelta": 50.005,
  },
  "searchText": "",
  "stations": Array [
    Object {
      "latitude": 25,
      "longitude": 25,
    },
    Object {
      "latitude": 75,
      "longitude": 75,
    },
  ],
  "trip": Object {
    "currentLocation": Object {
      "latitude": 50,
      "latitudeDelta": 0.01,
      "longitude": 50,
      "longitudeDelta": 0.01,
    },
    "destination": Object {
      "latitude": 100,
      "longitude": 100,
    },
  },
}
`;
